<resources>
    <string name="app_name">SwirlChat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="generate_otp_text">Generate OTP</string>
    <string name="verify_number_image_cd">verify number_image</string>
    <string name="verify_otp_text">Verify OTP</string>
    <string name="otp_hint">236478</string>
    <string name="otp_sent_msg">We have sent you an OTP for \n verification phone number</string>
    <string name="enter_otp_text">Enter OTP</string>
    <string name="username_edittext_hint">Username</string>
    <string name="user_status_edittext_text">Hey! I\'m using SwirlChat</string>
    <string name="done_btn_text">Done</string>
    <string name="get_userdata_image_cd">get userdata image</string>
    <string name="phone_number_edittext_hint">Number</string>
    <string name="enter_your_number_for_verification_text">Enter your number for verification</string>
    <string name="verify_your_number_text">Verify your number</string>
    <string name="verify_number_screen_image_content_desc">Verify Number Screen Image</string>
    <string name="blank_user_name_err_msg">Please Enter a username, it\'s required</string>
    <string name="blank_status_err_msg">Please Enter the status, it\'s required</string>
    <string name="No_profile_image_err_msg">"Please add a profile picture, it's required"</string>
    <string name="profile_frag_username_label">Username</string>
    <string name="profile_frag_firstname_label">First Name</string>
    <string name="profile_frag_lastname_label">Last Name</string>
    <string name="profile_details_content_desc">Profile details content desc</string>
    <string name="profile_frag_phone_label">Phone</string>
    <string name="profile_frag_delete_account_label">Delete Account</string>
    <string name="user_info_cd">User Info cd</string>
    <string name="imageviewcd">imageViewCD</string>
    <string name="button_send_cd">Button Send</string>
    <string name="write_message_hint">Write message..</string>
    <string name="add_attachment_cd">Add Attachment</string>
    <string name="back_to_contacts_cd">Back to Contacts</string>
    <string name="user_details_cd">User Details</string>
    <string name="message_online_status_cd">message online status cd</string>
    <string name="timestamp_tv">00:00</string>
    <string name="message_image_cd">message_image_cd</string>
    <string name="close_bottom_sheet">Close</string>
    <string name="no_connectivity_cd">No Connectivity cd</string>
    <string name="no_internet_msg_text">Please Check your Internet Connection</string>
    <string name="connectivity_issue_textt">Connectivity Issue</string>
</resources>