<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardBackground"
    tools:context=".ui.fragments.GetUserNumber">

    <ImageView
        android:id="@+id/imgGetNumber"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/verify_number_screen_image_content_desc"
        android:src="@drawable/group_1" />

    <TextView
        android:id="@+id/txtVerify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgGetNumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/verify_your_number_text"
        android:textColor="@color/dark_grey"
        android:textSize="20sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtVerify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/enter_your_number_for_verification_text"
        android:textColor="@color/dark_grey"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCodePicker"
            android:layout_width="150dp"
            android:layout_height="50dp"
            app:ccp_autoFormatNumber="true"
            app:ccp_contentColor="@color/dark_grey"
            app:ccp_countryPreference="IN"
            app:ccp_defaultPhoneCode="91"
            app:ccp_showFlag="true" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorAccent" />

        <EditText
            android:id="@+id/edtNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:autofillHints=""
            android:backgroundTint="@color/dark_grey"
            android:hint="@string/phone_number_edittext_hint"
            android:inputType="number"
            android:maxLength="10"
            android:textAlignment="center"
            android:textColor="@color/dark_grey"
            android:textColorHint="@color/dark_grey" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGenerateOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_background"
        android:padding="16dp"
        android:text="@string/generate_otp_text"
        android:textColor="@color/cardBackground"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>