<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/no_internet_bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="62dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <ImageView
        android:id="@+id/noInternetImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/no_connectivity_cd"
        android:src="@drawable/no_connectivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noInternetTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/connectivity_issue_textt"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noInternetImageView"
        tools:text="Connectivity Issue" />

    <TextView
        android:id="@+id/NoInternetMsgTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/no_internet_msg_text"
        app:layout_constraintEnd_toEndOf="@+id/noInternetTv"
        app:layout_constraintStart_toStartOf="@+id/noInternetTv"
        app:layout_constraintTop_toBottomOf="@+id/noInternetTv"
        tools:text="Please Check your Internet Connection" />
</androidx.constraintlayout.widget.ConstraintLayout>