<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.GetUserData">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/cardBackground">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imgUser"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher_background"
            app:civ_border_color="@android:color/holo_red_light"
            app:civ_border_width="2dp" />

        <ImageView
            android:id="@+id/imgPickImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="170dp"
            android:contentDescription="@string/get_userdata_image_cd"
            android:src="@drawable/ic_camera"
            app:layout_anchor="@id/imgUser"
            app:layout_anchorGravity="end|center"
            app:tint="@color/colorPrimaryPix" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="250dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="25dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:background="@color/edittextColor"
                android:hint="@string/username_edittext_hint"
                android:inputType="text|textCapSentences"
                android:padding="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtUserStatus"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="30dp"
                android:background="@color/edittextColor"
                android:inputType="text|textCapSentences"
                android:padding="10dp"
                android:text="@string/user_status_edittext_text"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnDataDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:backgroundTint="@color/colorPrimary"
        android:padding="16dp"
        android:text="@string/done_btn_text"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>
