<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="userModel"
            type="com.theleafapps.pro.swirlchat.entities.UserModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.ProfileFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".8"
                android:padding="32dp"
                android:background="@color/white"
                android:orientation="vertical"
                android:weightSum="2">

                <androidx.coordinatorlayout.widget.CoordinatorLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.4">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imgProfile"
                        imageUrl="@{userModel.image}"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center" />

                    <ImageView
                        android:id="@+id/imgPickImage"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_camera"
                        app:layout_anchor="@id/imgProfile"
                        app:layout_anchorGravity="end|bottom"
                        app:tint="@color/green" />
                </androidx.coordinatorlayout.widget.CoordinatorLayout>

                <TextView
                    android:id="@+id/txtProfileName"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_weight=".3"
                    android:text="@{userModel.name , default=Nothing}"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="profile_name" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight=".3">

                    <TextView
                        android:id="@+id/txtProfileStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_weight=".4"
                        android:text="@{userModel.status , default=Nothing}"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="20sp"
                        tools:text="profile_status" />

                    <ImageView
                        android:id="@+id/imgEditStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/txtProfileStatus"
                        android:src="@drawable/ic_edit" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="24dp"
                android:layout_height="0dp"
                android:layout_weight="1.2"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/profile_frag_username_label"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="2">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_weight="1"
                                android:text="@string/profile_frag_firstname_label"
                                android:textColor="@color/grey"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/profile_frag_lastname_label"
                                android:textColor="@color/grey"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_next"
                                android:contentDescription="@string/profile_details_content_desc" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <TextView
                                android:id="@+id/txtProfileFName"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="5dp"
                                android:layout_weight=".9"
                                android:text="@string/profile_frag_firstname_label"
                                android:textColor="@android:color/holo_red_light"
                                android:textSize="16sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/txtProfileLName"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="20dp"
                                android:layout_marginEnd="10dp"
                                android:layout_weight="1.1"
                                android:text="@string/profile_frag_lastname_label"
                                android:textColor="@android:color/holo_red_light"
                                android:textSize="16sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:padding="16dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/profile_frag_phone_label"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txtProfileNumber"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:text="@{userModel.number , default=Nothing}"
                            android:textColor="@android:color/holo_red_light"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/deleteCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:padding="16dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/profile_frag_delete_account_label"
                            android:textColor="@android:color/holo_red_light"
                            android:textSize="20sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>